# winprint.rs

./: Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: test.yml
examples/: extract_print_capabilities.rs  print_to_file.rs
src/: lib.rs
src/bindings/: mod.rs  pdfium.rs
src/printer/: device.rs  dxgi.rs  file.rs  image.rs  info.rs  mod.rs  pdfium.rs  win_pdf.rs  xps.rs
src/test_utils/: file_device.rs  mod.rs  null_device.rs
src/ticket/: builder.rs  copies.rs  document_duplex.rs  feature_option_pack.rs  job_duplex.rs  media_size_tuple.rs  mod.rs  page_imageable_size.rs  page_media_size.rs  page_orientation.rs  page_output_color.rs  page_resolution.rs  predefined_duplex_type.rs  predefined_media_name.rs  predefined_page_orientation.rs  predefined_page_output_color.rs  print_capabilities.rs  print_schema.rs  print_schema_parser.rs  print_schema_serializer.rs  print_ticket.rs
src/ticket/document/: mod.rs  print_schema.rs  reader.rs  writer.rs
src/utils/: com.rs  emf.rs  mod.rs  print_completion_source.rs  stream.rs  wchar.rs
src/utils/pdfium/: custom_document.rs  guard.rs  mod.rs
test_data/: print_capabilities.xml  print_ticket.xml  test_document.tiff  test_document.xps
test_data/visual_regression/: data.tiff  data.xps
tests/: visual_regression_image.rs  visual_regression_pdfium.rs  visual_regression_xps.rs
tests/common/: loader.rs  mod.rs  print.rs  visual.rs
utils/gen-visual-regression-data/: README.md  run.py
utils/test-in-windows-vm/: Dockerfile  Vagrantfile  entrypoint-in-container.sh  run.sh
