[package]
edition = "2021"
name = "winprint"
version = "0.1.0"
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
keywords = ["printer", "printing", "xps", "pdf"]
categories = ["api-bindings", "os::windows-apis"]
description = "A crate for printing to a Windows printer device using Windows API"
license = "BSD-3-Clause"
readme = "README.md"
documentation = "https://docs.rs/winprint"
repository = "https://github.com/ArcticLampyrid/winprint.rs/"

[dependencies]
lazy_static = "1.4"
scopeguard = "1.2"
sha2 = { version = "0.10", optional = true }
bs58 = { version = "0.5.0", optional = true }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
fmt-derive = "0.1"
xml = "0.8"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Printing_PrintTicket",
    "Win32_Security",
    "Win32_Storage_Xps_Printing",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
ctor = "0.2"
env_logger = "0.11"
winprint = { path = ".", features = ["test-utils"], default-features = false }

[features]
default = ["pdfium"]
pdfium = []
test-utils = ["dep:sha2", "dep:bs58"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc"]
